--- a/biashara/templates/layout.html
+++ b/biashara/templates/layout.html
@@ -11,6 +11,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 
+    <!-- script for updating user profile -->
 	<script>
 	$(function(){
             $("#show-form").on('click',function() {
@@ -88,7 +89,7 @@
 		<!-- Categories: success (green), info (blue), warning (yellow), danger (red) -->
 			{% if messages %}
 				{% for category, message in messages %}
-					<div class="alert alert-{{ category }} alert-dismissible" role="alert">
+					<div class="alert alert-{{ category }} alert-dismissible" role="alert"  id="myflash">
 						<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 						{{ message }}
 					</div>
@@ -105,6 +106,14 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
+<!-- making my flash message disappear after 3 seconds  -->
+<script type="text/javascript">
+	window.setTimeout("closeHelpDiv();", 3000);
+
+	function closeHelpDiv(){
+	document.getElementById("myflash").style.display=" none";
+	}
+</script>
     
 </body>
 </html>
