--- a/biashara/templates/reviews.html
+++ b/biashara/templates/reviews.html
@@ -10,7 +10,7 @@
 		<div class="row mb-2">
 			<div class="col-4"><b>Category:</b> {{ business.business_category }}</div>
 			<div class="col-5"><b>Email:</b> {{ business.business_email }}</div>
-			<div class="col-3"><b>Posted by:</b> {{ business.reviewer.username }}</div>
+			<div class="col-3"><b>Posted by:</b> {{ business.posted_by.username }}</div>
 		</div>
 		<div class="border border-bottom-0 p-2 rounded-top">
 			<p><b>About: </b>{{ business.description }}</p>
@@ -31,7 +31,7 @@
 					<div class="border border-top-0 border-left-0">
 						<p>{{ review.reviews }}</p>
 					</div>
-					<div class="text-right"><small><b>By: </b>{{ business.reviewer.username }}</small></div>
+					<div class="text-right"><small><b>By: </b>{{ review.reviewer }}</small></div>
 				</div>
 				
 			</form>
