--- a/biashara/templates/writereview.html
+++ b/biashara/templates/writereview.html
@@ -10,7 +10,7 @@
 		<div class="row mb-2">
 			<div class="col-4"><b>Category:</b> {{ business.business_category }}</div>
 			<div class="col-5"><b>Email:</b> {{ business.business_email }}</div>
-			<div class="col-3"><b>Posted by:</b> {{ business.reviewer.username }}</div>
+			<div class="col-3"><b>Posted by:</b> {{ business.posted_by.username }}</div>
 		</div>
 		<div class="border border-bottom-0 p-2 rounded-top">
 			<p><b>About: </b>{{ business.description }}</p>
@@ -19,7 +19,7 @@
 			<div class="ml-auto w-50">
 				<small class="text-white"><b>Address:</b> {{ business.address }}</small>
 			</div>
-		</div>		
+		</div>
 		<div class="d-flex p-2 bg-light">
 			<div class="mx-auto text-center"><h3>Write Reviews</h3></div>
 		</div>
